--- a/WildKarrde/app/src/main/res/menu/menu1.xml
+++ b/WildKarrde/app/src/main/res/menu/menu1.xml
@@ -2,17 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/item1"
-        android:title="item 1"
+    <item android:id="@+id/addDailyTask"
+        android:title="Add Daily Task"
         app:showAsAction="withText" />
-    <item android:id="@+id/item2"
-        android:title="item 2"
+    <item android:id="@+id/addRecurringTask"
+        android:title="Add Recurring Task"
         app:showAsAction="withText" />
-    <item android:id="@+id/item3"
-        android:title="item 3"
-        app:showAsAction="withText" />
-    <item android:id="@+id/item4"
-        android:title="item 4"
+    <item android:id="@+id/addEvent"
+        android:title="Add Event"
         app:showAsAction="withText" />
 
 </menu>
