--- a/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
@@ -1,9 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".addDailyTask">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!--enter the name of the reminder
+    issa string!-->
+
+    <EditText
+        android:id="@+id/enterDailyName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
+    <!--enter in the date.
+    for now just a string.-->
+    <EditText
+        android:id="@+id/enterDailyDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/enterDailyName"/>
+
+    <Button
+        android:id="@+id/initDailyTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Add Daily Task" />
+
+</RelativeLayout>
