--- a/WildKarrde/app/src/main/res/layout/activity_registration.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_registration.xml
@@ -11,31 +11,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:hint="Username" />
 
     <EditText
         android:id="@+id/createEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/createUsername"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/createUsername"/>
+        android:hint="Email" />
 
     <EditText
         android:id="@+id/createPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/createEmail"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/createEmail"/>
+        android:hint="Password"
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/checkPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/createPassword"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_below="@+id/createPassword"/>
+        android:hint="Confirm Password"
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/registerUser"
