--- a/WildKarrde/app/src/main/res/layout/activity_registration.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_registration.xml
@@ -44,7 +44,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/registerUser"
+        android:id="@+id/submitRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
