--- a/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:inputType="text"
+        android:hint="Enter Daily Task Name"/>
     <!--enter in the date.
     for now just a string.-->
     <EditText
@@ -23,6 +25,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:hint="Enter Daily Task Date"
+        android:inputType="date"
         android:layout_below="@+id/enterDailyName"/>
 
     <Button
