--- a/WildKarrde/app/src/main/res/layout/activity_add_event.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_event.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:inputType="text"
+        android:hint="Event Name" />
     <!--enter in the date.
     for now just a string.-->
     <EditText
@@ -20,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:inputType="date"
+        android:hint="Event Date"
         android:layout_below="@+id/enterEventName"/>
 
     "
