--- a/WildKarrde/app/src/main/res/layout/activity_add_recurring_task.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_recurring_task.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:hint="Recurring Task Name"
+        android:inputType="text"/>
     <!--enter in the date.
     for now just a string.-->
     <EditText
@@ -20,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:hint="Recurring Date"
+        android:inputType="date"
         android:layout_below="@+id/enterRecurringName"/>
 
     <Button
