--- a/WildKarrde/app/src/main/res/layout/activity_add_recurring_task.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_recurring_task.xml
@@ -26,6 +26,35 @@
         android:inputType="date"
         android:layout_below="@+id/enterRecurringName"/>
 
+    <EditText
+        android:id="@+id/enterStringRecurringLocation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:inputType="text"
+        android:hint="Event Location"
+        android:layout_below="@+id/enterRecurringDate" />
+    <EditText
+        android:id="@+id/enterRecurringDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:inputType="textMultiLine"
+        android:hint="Description"
+        android:layout_below="@+id/enterStringRecurringLocation"/>
+
+    <EditText
+        android:id="@+id/enterRecurringTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:inputType="time"
+        android:hint="Time"
+        android:layout_below="@+id/enterRecurringDescription"/>
+
     <Button
         android:id="@+id/initRecurringTask"
         android:layout_width="wrap_content"
