--- a/WildKarrde/app/src/main/res/menu/menu1.xml
+++ b/WildKarrde/app/src/main/res/menu/menu1.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/profileIcon"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile"
+        app:showAsAction="ifRoom"
+        />
     <item android:id="@+id/addDailyTask"
         android:title="Add Daily Task"
         app:showAsAction="withText" />
