--- a/WildKarrde/app/src/main/res/layout/activity_main.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_main.xml
@@ -15,55 +15,58 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginEnd="249dp"
-        android:layout_marginRight="249dp"
-        android:layout_marginBottom="453dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginEnd="165dp"
+        android:layout_marginRight="165dp"
+        android:layout_marginBottom="90dp"
         android:text="View Statistics"
         tools:layout_centerHorizontal="true"
         tools:layout_centerVertical="true" />
 
     <Button
-        android:id="@+id/viewDailyTasks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="170dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginRight="102dp"
-        android:layout_marginBottom="522dp"
-        android:text="View Daily Tasks"
-        tools:layout_centerHorizontal="true"
-        tools:layout_centerVertical="true" />
-
-    <Button
         android:id="@+id/viewRecurringTasks"
-        android:layout_width="wrap_content"
+        android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginEnd="251dp"
-        android:layout_marginRight="251dp"
-        android:layout_marginBottom="522dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginRight="166dp"
+        android:layout_marginBottom="154dp"
         android:text="View Recurring Tasks"
         tools:layout_centerHorizontal="true"
         tools:layout_centerVertical="true" />
 
     <Button
         android:id="@+id/viewLogout"
-        android:layout_width="wrap_content"
+        android:layout_width="129dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="299dp"
-        android:layout_marginLeft="299dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginStart="252dp"
+        android:layout_marginLeft="252dp"
+        android:layout_marginBottom="19dp"
         android:text="Logout" />
+
+    <Button
+        android:id="@+id/viewDailyTasks"
+        android:layout_width="237dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="166dp"
+        android:layout_marginRight="166dp"
+        android:layout_marginBottom="218dp"
+        android:text="View Daily Tasks"
+        tools:layout_centerHorizontal="true"
+        tools:layout_centerVertical="true" />
 </RelativeLayout>
