Added simple database for android side reminders and finished add_reminders.php for full functionality

--- a/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_daily_task.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".addDailyTask">
 
-    <!--enter the name of the reminder
+    <!--enter the name of the Reminder
     issa string!-->
 
     <EditText
