--- a/WildKarrde/app/src/main/res/layout/activity_view_daily_tasks.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_view_daily_tasks.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".viewDailyTasks">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dailyRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:scrollbars="vertical"
+        android:background="@android:color/darker_gray"/>
+
 </RelativeLayout>
