--- a/WildKarrde/app/src/main/res/layout/activity_add_event.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_add_event.xml
@@ -53,7 +53,7 @@
         android:layout_below="@+id/enterEventDescription"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:hint="Start Time"
+        android:hint="Start Time (00:XX-23:XX)"
         android:inputType="time" />
 
     <EditText
@@ -65,7 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="16dp"
-        android:hint="End Time"
+        android:hint="End Time (00:XX-23:XX)"
         android:inputType="time" />
 
     <Button
