--- a/WildKarrde/app/src/main/res/layout/activity_main.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
 
     <Button
         android:id="@+id/viewStats"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -26,6 +27,7 @@
 
     <Button
         android:id="@+id/viewRecurringTasks"
+        android:visibility="gone"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -48,9 +50,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="252dp"
-        android:layout_marginLeft="252dp"
-        android:layout_marginBottom="19dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="138dp"
+        android:layout_marginLeft="138dp"
+        android:layout_marginBottom="446dp"
         android:text="Logout" />
 
     <Button
@@ -62,10 +65,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginRight="166dp"
-        android:layout_marginBottom="218dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="516dp"
         android:text="View Daily Tasks"
         tools:layout_centerHorizontal="true"
         tools:layout_centerVertical="true" />
