--- a/WildKarrde/app/src/main/res/layout/activity_main.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_main.xml
@@ -27,19 +27,19 @@
 
     <Button
         android:id="@+id/viewRecurringTasks"
-        android:visibility="gone"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginRight="166dp"
-        android:layout_marginBottom="154dp"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="84dp"
+        android:layout_marginEnd="89dp"
+        android:layout_marginRight="89dp"
+        android:layout_marginBottom="436dp"
         android:text="View Recurring Tasks"
+        android:visibility="visible"
         tools:layout_centerHorizontal="true"
         tools:layout_centerVertical="true" />
 
@@ -53,7 +53,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="138dp"
         android:layout_marginLeft="138dp"
-        android:layout_marginBottom="446dp"
+        android:layout_marginBottom="333dp"
         android:text="Logout" />
 
     <Button
