added view recurring tasks

--- a/WildKarrde/app/src/main/res/layout/activity_view_recurring_tasks.xml
+++ b/WildKarrde/app/src/main/res/layout/activity_view_recurring_tasks.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".viewRecurringTasks">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recurringRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="4dp"
+        android:scrollbars="vertical"
+        android:background="@android:color/white"/>
+
 </RelativeLayout>
