--- a/WildKarrde/app/src/main/res/layout/recurring_task.xml
+++ b/WildKarrde/app/src/main/res/layout/recurring_task.xml
@@ -32,7 +32,7 @@
             android:id="@+id/recurringTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dailyTitle"
+            android:layout_below="@+id/recurringTitle"
             android:layout_marginStart="73dp"
             android:layout_toEndOf="@+id/checkboxImage"
             android:text="Time"
